	* added support for adding torrents asynchronously (for improved startup performance)
	* added support for asynchronous disk I/O
	* almost completely changed the storage interface (for custom storage)
	* added support for hashing pieces in multiple threads

	* fix uTP edge case where udp socket buffer fills up
	* fix nagle implementation in uTP

	* fix race condition causing shutdown hang

0.16.2 release

	* fix permissions issue on linux with noatime enabled for non-owned files
	* use random peer IDs in anonymous mode
	* fix move_storage bugs
	* fix unnecessary dependency on boost.date_time when building boost.asio as separate compilation
	* always use SO_REUSEADDR and deprecate the flag to turn it on
	* add python bindings for SSL support
	* minor uTP tweaks
	* fix end-game mode issue when some files are selected to not be downloaded
	* improve uTP slow start
	* make uTP less aggressive resetting cwnd when idle

0.16.1 release

	* fixed crash when providing corrupt resume data
	* fixed support for boost-1.44
	* fixed reversed semantics of queue_up() and queue_down()
	* added missing functions to python bindings (file_priority(), set_dht_settings())
	* fixed low_prio_disk support on linux
	* fixed time critical piece accounting in the request queue
	* fixed semantics of rate_limit_utp to also ignore per-torrent limits
	* fixed piece sorting bug of deadline pieces
	* fixed python binding build on Mac OS and BSD
	* fixed UNC path normalization (on windows, unless UNC paths are disabled)
	* fixed possible crash when enabling multiple connections per IP
	* fixed typo in win vista specific code, breaking the build
	* change default of rate_limit_utp to true
	* fixed DLL export issue on windows (when building a shared library linking statically against boost)
	* fixed FreeBSD build
	* fixed web seed performance issue with pieces > 1 MiB
	* fixed unchoke logic when using web seeds
	* fixed compatibility with older versions of boost (down to boost 1.40)

0.16 release
